--- a/protective-measure/fire-suppresion-systems.html
+++ b/protective-measure/fire-suppresion-systems.html
@@ -344,7 +344,7 @@
 					<h3 class="text-2xl font-medium text-[#E2C8F1]">Practical Usage</h3>
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
-							<img src="../assets/server1.jpeg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/server1.jpeg" target="image-viewer"><img src="../assets/server1.jpeg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
 						</div>
 						<div class="flex items-center justify-center">
 							<div class="space-y-4">
@@ -362,13 +362,13 @@
 							</div>
 						</div>
 						<div class="flex justify-center">
-							<img src="../assets/suppresion2.jpg " class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/suppresion2.jpg" target="image-viewer"><img src="../assets/suppresion2.jpg " class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
 						</div>
 					</div>
 
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
-							<img src="../assets/suppresion3.webp" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/suppresion3.webp" target="image-viewer"><img src="../assets/suppresion3.webp " class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
 						</div>
 						<div class="flex items-center justify-center">
 							<div class="space-y-4">
