--- a/protective-measure/lokced-server-room.html
+++ b/protective-measure/lokced-server-room.html
@@ -344,8 +344,8 @@
 					<h3 class="text-2xl font-medium text-[#E2C8F1]">Practical Usage</h3>
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
-							<img src="../assets/server1.jpeg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
-						</div>
+							<a href="../assets/server1.jpeg" target="image-viewer"><img src="../assets/server1.jpeg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+						</div></a>
 						<div class="flex items-center justify-center">
 							<div class="space-y-4">
 								<h5 class="text-xl font-medium">Data Centers and IT Departments</h5>
@@ -362,13 +362,13 @@
 							</div>
 						</div>
 						<div class="flex justify-center">
-							<img src="../assets/school-building.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/school-building.jpg" target="image-viewer"><img src="../assets/school-building.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
 						</div>
 					</div>
 
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
-							<img src="../assets/server3.webp" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/server3.webp" target="image-viewer"><img src="../assets/server3.webp" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
 						</div>
 						<div class="flex items-center justify-center">
 							<div class="space-y-4">
