--- a/protective-measure/multi-factor-authentication.html
+++ b/protective-measure/multi-factor-authentication.html
@@ -346,7 +346,7 @@
 					<h3 class="text-2xl font-medium text-[#E2C8F1]">How good is this software measure</h3>
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
-							<img src="../assets/eye.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/eye.jpg" target="image-viewer"><img src="../assets/eye.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
 						</div>
 						<div class="flex items-center justify-center">
 							<div class="space-y-4">
@@ -364,13 +364,13 @@
 							</div>
 						</div>
 						<div class="flex justify-center">
-							<img src="../assets/token-based-auth.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/token-based-auth.jpg" target="image-viewer"><img src="../assets/token-based-auth.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
 						</div>
 					</div>
 
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
-							<img src="../assets/push-notification.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/push-notification.jpg" target="image-viewer"><img src="../assets/push-notification.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
 						</div>
 						<div class="flex items-center justify-center">
 							<div class="space-y-4">
