--- a/protective-measure/secure-networks.html
+++ b/protective-measure/secure-networks.html
@@ -331,7 +331,7 @@
 					<h3 class="text-2xl font-medium text-[#E2C8F1]">Practical Usage</h3>
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
-							<img src="../assets/network-segmentation.png" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/network-segmentation.png" target="image-viewer"><img src="../assets/network-segmentation.png" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
 						</div>
 						<div class="flex justify-center items-center">
 							<div class="space-y-4">
@@ -349,13 +349,13 @@
 							</div>
 						</div>
 						<div class="flex justify-center">
-							<img src="../assets/school-building.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/school-building.jpg" target="image-viewer"><img src="../assets/school-building.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
 						</div>
 					</div>
 
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
-							<img src="../assets/hospital.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/hospital.jpg" target="image-viewer"><img src="../assets/hospital.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
 						</div>
 						<div class="flex items-center justify-center">
 							<div class="space-y-4">
