--- a/protective-measure/security-guard.html
+++ b/protective-measure/security-guard.html
@@ -343,7 +343,7 @@
 					<h3 class="text-2xl font-medium text-[#E2C8F1]">Practical Usage</h3>
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
-							<img src="../assets/sec1.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/sec1.jpg" target="image-viewer"><img src="../assets/sec1.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
 						</div>
 						<div class="flex items-center justify-center">
 							<div class="space-y-4">
@@ -361,13 +361,13 @@
 							</div>
 						</div>
 						<div class="flex justify-center">
-							<img src="../assets/sec2.webp" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/sec2.webp" target="image-viewer"><img src="../assets/sec2.webp" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
 						</div>
 					</div>
 
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
-							<img src="../assets/sec3.webp" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/sec3.webp" target="image-viewer"><img src="../assets/sec3.webp" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
 						</div>
 						<div class="flex items-center justify-center">
 							<div class="space-y-4">
