--- a/protective-measure/surveillance-cameras.html
+++ b/protective-measure/surveillance-cameras.html
@@ -345,7 +345,7 @@
 					<h3 class="text-2xl font-medium text-[#E2C8F1]">Practical Usage</h3>
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
-							<img src="../assets/cctv1.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/cctv1.jpg" target="image-viewer"><img src="../assets/cctv1.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
 						</div>
 						<div class="flex items-center justify-center">
 							<div class="space-y-4">
@@ -363,13 +363,13 @@
 							</div>
 						</div>
 						<div class="flex justify-center">
-							<img src="../assets/cctv2.jpeg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/cctv2.jpeg" target="image-viewer"><img src="../assets/cctv2.jpeg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
 						</div>
 					</div>
 
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
-							<img src="../assets/cct3.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/cct3.jpg" target="image-viewer"><img src="../assets/cct3.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
 						</div>
 						<div class="flex items-center justify-center">
 							<div class="space-y-4">
