--- a/protective-measure/update-programs-and-systems-regularly.html
+++ b/protective-measure/update-programs-and-systems-regularly.html
@@ -363,7 +363,7 @@
 					<h3 class="text-2xl font-medium text-[#E2C8F1]">Practical Usage</h3>
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
-							<img src="../assets/datacenter.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/datacenter.jpg" target="image-viewer"><img src="../assets/datacenter.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
 						</div>
 						<div class="flex justify-center items-center">
 							<div class="space-y-4">
@@ -381,13 +381,13 @@
 							</div>
 						</div>
 						<div class="flex justify-center">
-							<img src="../assets/school-building.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/school-building.jpg" target="image-viewer"><img src="../assets/school-building.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
 						</div>
 					</div>
 
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
-							<img src="../assets/hospital.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+							<a href="../assets/hospital.jpg" target="image-viewer"><img src="../assets/hospital.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
 						</div>
 						<div class="flex items-center justify-center">
 							<div class="space-y-4">
