--- a/gallery.html
+++ b/gallery.html
@@ -416,6 +416,14 @@
                     <a href="assets/gallery/cord.png">
                         <img src="assets/gallery/cord.png" class="rounded-lg shadow-lg w-72 md:h-96 h-48 object-cover">
                     </a>
+
+                    <a href="assets/gallery/self.jpg">
+                        <img src="assets/gallery/self.jpg" class="rounded-lg shadow-lg w-72 md:h-96 h-48 object-cover">
+                    </a>
+
+                    <a href="assets/gallery/push.png">
+                        <img src="assets/gallery/push.png" class="rounded-lg shadow-lg w-72 md:h-96 h-48 object-cover">
+                    </a>
                 </div>
             </div>
 		</div>
