--- a/concepts-of-cybersecurity.html
+++ b/concepts-of-cybersecurity.html
@@ -293,7 +293,7 @@
                     </div>
 				</div>
 				<div class="flex justify-center mt-8 px-4 md:mt-0">
-					<img src="assets/home-page.png" alt="Pic" class="md:block hidden max-w-full h-auto">
+					<img src="assets/concept.png" alt="Pic" class="md:block hidden max-w-full h-auto">
 				</div>
 			</div>
 		</div>
