final nav sample

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                             <a href="./contact-us.html" class="hidden md:block">Contact Us</a>
                         </li>
                         <li>
+                            <a href="./gallery.html" class="hidden md:block">Gallery</a>
+                        </li>
+                        <li>
                             <button class="cursor-pointer p-2 rounded" id="menu-toggle">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
@@ -63,7 +66,10 @@
 
                                         <a href="./concepts-of-cybersecurity.html"><li class="text-gray-300 hover:bg-[#171c57] ease duration-200 py-1 px-4 rounded">Learn Now</li></a>
 
-                                        <a href="#"></a><li class="text-gray-300 hover:bg-[#171c57] ease duration-200 py-1 px-4 rounded">Contact Us</li>
+                                        <a href="./contact-us.html"><li class="text-gray-300 hover:bg-[#171c57] ease duration-200 py-1 px-4 rounded">Contact Us</li></a>
+
+                                        <a href="./gallery.html"><li class="text-gray-300 hover:bg-[#171c57] ease duration-200 py-1 px-4 rounded">Gallery</li></a>
+
                                     </ul>
                                 </li>
                             </ul>
@@ -303,20 +309,6 @@
                                         </a>
                                     </ul>
                                 </li>
-                            </ul>
-                        </li>
-
-                        <!-- PHOTO GALLERY -->
-                        <li class="px-4">
-                            <ul class="space-y-2">
-                                <a href="./gallery.html"><li class="text-lg font-medium">Photo Gallery</li></a>
-                            </ul>
-                        </li>
-
-                        <!-- CONTACT US -->
-                        <li class="px-4">
-                            <ul class="space-y-2">
-                                <a href="#"><li class="text-lg font-medium">Contact Us</li></a>
                             </ul>
                         </li>
                     </ul>
