update: fixed hover animation

--- a/concept-of-cybersecurity/origin-of-hacking-and-cybercrime.html
+++ b/concept-of-cybersecurity/origin-of-hacking-and-cybercrime.html
@@ -60,7 +60,7 @@
                     </h4>
 
                     <div class="grid grid-cols-1 gap-4">
-                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3 transform transition-all duration-300 hover:scale-105">
+                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="text-2xl font-medium text-[#E2C8F1]">The Morris Worm (November, 1988)</h6>
                             <p class="text-sm text-gray-300">November, 1988</p>
                             <div>
@@ -71,7 +71,7 @@
                             </div>
                         </div>
 
-                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3 transform transition-all duration-300 hover:scale-105">
+                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="text-2xl font-medium text-[#E2C8F1]">The Melissa Virus (March, 1999)</h6>
                             <p class="text-sm text-gray-300">March, 1999</p>
                             <div>
@@ -82,7 +82,7 @@
                             </div>
                         </div>
 
-                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3 transform transition-all duration-300 hover:scale-105">
+                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="text-2xl font-medium text-[#E2C8F1]">ILOVEYOU virus (May, 2000)</h6>
                             <p class="text-sm text-gray-300">May, 2000</p>
                             <div>
