--- a/concept-of-cybersecurity/prominent-hackers.html
+++ b/concept-of-cybersecurity/prominent-hackers.html
@@ -43,7 +43,7 @@
 		<div class="bg-gradient-to-b from-black to-[#141528] pt-24 space-y-6 px-2">
             <div class="grid grid-cols-3 gap-10 max-w-4xl mx-auto">
                     <div class="col-span-3">
-                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105 hover:bg-[#1D1F3E] ease duration-300">
                             <img src="assets/prominent-hacker-kevin-mitnick.png" class="w-64 h-64 ob-ject-cover rounded-s-lg" alt="Black and white portrait of a man speaking with a serious expression">
                             <div class="block p-4 space-y-4">
                                 <h5 class="text-xl font-medium">Kevin Mitnick</h5>
@@ -54,7 +54,7 @@
                     </div>
 
                     <div class="col-span-3">
-                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105 hover:bg-[#1D1F3E] ease duration-300">
                             <img src="assets/prominent-hacker-tsutomu-shimomura.png" class="w-64 h-64 ob-ject-cover rounded-s-lg" alt="Portrait of a man with long hair standing outdoors with a slight smile">
                             <div class="block p-4 space-y-4">
                                 <h5 class="text-xl font-medium">Tsutomu Shimomura</h5>
@@ -64,7 +64,7 @@
                     </div>
 
                     <div class="col-span-3">
-                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105 hover:bg-[#1D1F3E] ease duration-300">
                             <img src="assets/prominent-hacker-charlie-miller.png" class="w-64 h-64 ob-ject-cover rounded-s-lg" alt="Man in front of multiple computer screens in a tech-focused setting">
                             <div class="block p-4 space-y-4">
                                 <h5 class="text-xl font-medium">Charlie Miller</h5>
@@ -74,7 +74,7 @@
                     </div>
 
                     <div class="col-span-3">
-                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105 hover:bg-[#1D1F3E] ease duration-300">
                             <img src="assets/prominent-hacker-joanna-rutkowska.png" class="w-64 h-64 ob-ject-cover rounded-s-lg" alt="Woman with glasses and a neutral expression facing the camera">
                             <div class="block p-4 space-y-4">
                                 <h5 class="text-xl font-medium">Joanna Rutkowska</h5>
@@ -84,7 +84,7 @@
                     </div>
 
                     <div class="col-span-3">
-                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105 hover:bg-[#1D1F3E] ease duration-300">
                             <img src="assets/prominent-hacker-bruce-schneier.png" class="w-64 h-64 ob-ject-cover rounded-s-lg" alt="Man with a beard and a flat cap wearing a blazer and patterned shirt">
                             <div class="block p-4 space-y-4">
                                 <h5 class="text-xl font-medium">Bruce Schneier</h5>
@@ -94,7 +94,7 @@
                     </div>
 
                     <div class="col-span-3">
-                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105 hover:bg-[#1D1F3E] ease duration-300">
                             <img src="assets/prominent-hacker-greg-hoglund.png" class="w-64 h-64 ob-ject-cover rounded-s-lg" alt="Man smiling with a beard and a stripped polo shirt">
                             <div class="block p-4 space-y-4">
                                 <h5 class="text-xl font-medium">Greg Hoglund</h5>
