Updated navigation on all html in root dir

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="w-full p-4 flex items-center justify-between">
                     <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
                         <div class="flex items-center space-x-4">
-                            <img src="assets/logo.svg" class="w-14 h-14 text-black">
+                            <img src="./assets/logo.svg" class="w-14 h-14 text-black">
                             <h4 class="text-2xl">ThreatScope</h4>
                         </div>
                     </div>
@@ -51,7 +51,7 @@
                 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500 pb-10">
                     <ul class="space-y-6 text-left">
                         <li class="flex items-center space-x-4 p-4">
-                            <img src="assets/logo.svg" class="w-14 h-14">
+                            <img src="./assets/logo.svg" class="w-14 h-14">
                             <h4 class="text-2xl">ThreatScope</h4>
                         </li>
     
