--- a/new-heading-sample.html
+++ b/new-heading-sample.html
@@ -14,7 +14,7 @@
                 <div class="w-full p-4 flex items-center justify-between">
                     <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
                         <div class="flex items-center space-x-4">
-                            <img src="assets/logo.svg" class="w-14 h-14 text-black">
+                            <img src="./assets/logo.svg" class="w-14 h-14 text-black">
                             <h4 class="text-2xl">ThreatScope</h4>
                         </div>
                     </div>
@@ -30,6 +30,9 @@
                         </li>
                         <li>
                             <a href="./contact-us.html" class="hidden md:block">Contact Us</a>
+                        </li>
+                        <li>
+                            <a href="./gallery.html" class="hidden md:block">Gallery</a>
                         </li>
                         <li>
                             <button class="cursor-pointer p-2 rounded" id="menu-toggle">
@@ -48,7 +51,7 @@
                 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500 pb-10">
                     <ul class="space-y-6 text-left">
                         <li class="flex items-center space-x-4 p-4">
-                            <img src="assets/logo.svg" class="w-14 h-14">
+                            <img src="./assets/logo.svg" class="w-14 h-14">
                             <h4 class="text-2xl">ThreatScope</h4>
                         </li>
     
@@ -63,7 +66,10 @@
 
                                         <a href="./concepts-of-cybersecurity.html"><li class="text-gray-300 hover:bg-[#171c57] ease duration-200 py-1 px-4 rounded">Learn Now</li></a>
 
-                                        <a href="#"></a><li class="text-gray-300 hover:bg-[#171c57] ease duration-200 py-1 px-4 rounded">Contact Us</li>
+                                        <a href="./contact-us.html"><li class="text-gray-300 hover:bg-[#171c57] ease duration-200 py-1 px-4 rounded">Contact Us</li></a>
+
+                                        <a href="./gallery.html"><li class="text-gray-300 hover:bg-[#171c57] ease duration-200 py-1 px-4 rounded">Gallery</li></a>
+
                                     </ul>
                                 </li>
                             </ul>
@@ -303,20 +309,6 @@
                                         </a>
                                     </ul>
                                 </li>
-                            </ul>
-                        </li>
-
-                        <!-- PHOTO GALLERY -->
-                        <li class="px-4">
-                            <ul class="space-y-2">
-                                <a href="./gallery.html"><li class="text-lg font-medium">Photo Gallery</li></a>
-                            </ul>
-                        </li>
-
-                        <!-- CONTACT US -->
-                        <li class="px-4">
-                            <ul class="space-y-2">
-                                <a href="#"><li class="text-lg font-medium">Contact Us</li></a>
                             </ul>
                         </li>
                     </ul>
