--- a/concept-of-cybersecurity/origin-of-hacking-and-cybercrime.html
+++ b/concept-of-cybersecurity/origin-of-hacking-and-cybercrime.html
@@ -468,5 +468,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 15.75 7.5-7.5 7.5 7.5" />
             </svg>              
         </a>
+        
+		<script src="../assets/js/main.js"></script>
 	</body>
 </html>
