fixed src issues

--- a/famous-cyber-attacked-companies.html
+++ b/famous-cyber-attacked-companies.html
@@ -469,7 +469,7 @@
             </div>
         </footer>
 		</div>
-		<script src="..assets/js/main.js"></script>
+		<script src="assets/js/main.js"></script>
 	<a href="#hero" class="fixed bottom-5 right-5 bg-indigo-700 text-white p-3 rounded-full shadow-lg hover:bg-indigo-600 transition duration-300">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 15.75 7.5-7.5 7.5 7.5" />
