--- a/famous-cyber-attacked-companies.html
+++ b/famous-cyber-attacked-companies.html
@@ -44,7 +44,7 @@
                     </ul>
                 </div>
                 <!-- SIDEBAR -->
-                <div id="sidebar" class="fixed inset-y-0 overflow-y-auto left-0 w-64 bg-[#111436] text-white transform -translate-x-full transition-transform duration-300 [&::-webkit-scrollbar]:w-1
+                <div id="sidebar" class="fixed inset-y-0 overflow-y-auto left-0 w-64 bg-[#111436] text-white transform -translate-x-full transition-transform duration-300 z-50 [&::-webkit-scrollbar]:w-1
                 [&::-webkit-scrollbar-track]:bg-gray-100
                 [&::-webkit-scrollbar-thumb]:bg-gray-300
                 dark:[&::-webkit-scrollbar-track]:bg-neutral-700
@@ -329,7 +329,7 @@
 			</div>
 		</div>
 		
-        <div class="grid md:grid-cols-3 grid-cols-1 max-w-6xl mx-auto mt-24 gap-4 md:px-2 px-4">
+        <div class="grid md:grid-cols-3 grid-cols-1 max-w-6xl mx-auto mt-24 gap-4 md:px-2 px-4 border">
             <a href="continents/africa.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 
                 <div class="relative w-full h-96">
