removed debug border

--- a/famous-cyber-attacked-companies.html
+++ b/famous-cyber-attacked-companies.html
@@ -329,7 +329,7 @@
 			</div>
 		</div>
 		
-        <div class="grid md:grid-cols-3 grid-cols-1 max-w-6xl mx-auto mt-24 gap-4 md:px-2 px-4 border">
+        <div class="grid md:grid-cols-3 grid-cols-1 max-w-6xl mx-auto mt-24 gap-4 md:px-2 px-4">
             <a href="continents/africa.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 
                 <div class="relative w-full h-96">
