--- a/continents/asia.html
+++ b/continents/asia.html
@@ -49,6 +49,7 @@
                 [&::-webkit-scrollbar-thumb]:bg-gray-300
                 dark:[&::-webkit-scrollbar-track]:bg-neutral-700
                 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500 pb-10">
+                    <ul class="space-y-6 text-left">
                         <li class="flex items-center space-x-4 p-4">
                             <img src="../assets/logo.svg" class="w-14 h-14">
                             <h4 class="text-2xl">ThreatScope</h4>
