--- a/continents/south-america.html
+++ b/continents/south-america.html
@@ -333,7 +333,7 @@
 
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 max-w-6xl mx-auto mt-24 gap-4 px-4">
             <!-- COMPANY 1 -->
-            <a href="/companies-south-america/banco-de-chile.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+            <a href="../continents/south-america/banco-de-chile.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/picture-south-america/Banco-de-chile.jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
@@ -342,7 +342,7 @@
             </a>
 
             <!-- COMPANY 2 -->
-            <a href="/companies-south-america/consejo-nacional-electoral.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+            <a href="../continents/south-america/consejo-nacional-electoral.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/picture-south-america/concejo-nacional-electoral.jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
@@ -351,7 +351,7 @@
             </a>
 
             <!-- COMPANY 3 -->
-            <a href="/companies-south-america/embratel.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+            <a href="../continents/south-america/embratel.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/picture-south-america/embratel(2).jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
@@ -360,7 +360,7 @@
             </a>
 
             <!-- COMPANY 4 -->
-            <a href="/companies-south-america/ministerio-de-salud-publica.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+            <a href="../continents/south-america/ministerio-de-salud-publica.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/picture-south-america/Ministerio.jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
@@ -369,7 +369,7 @@
             </a>
 
             <!-- COMPANY 5 -->
-            <a href="/companies-south-america/telecom-argentina.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+            <a href="../continents/south-america/telecom-argentina.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/picture-south-america/telecom.jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
