--- a/new-heading-sample.html
+++ b/new-heading-sample.html
@@ -337,16 +337,18 @@
             <div class="grid md:grid-cols-2 grid-cols-1 grid-rows-3 gap-4 max-w-6xl mx-auto" id="explore">
                 <div class="col-span-1 row-span-3 space-y-4">
                     
-                    <img src="assets/famous-cyber-attacks/data-breach-comelec (1).jpg" alt="" class="w-full h-72 object-cover rounded">
-                    <h2 class="text-2xl font-bold">2016 COMELEC Data Breach Exposes 55 Million Voters in Massive Philippine Cyberattack</h2>
+                    <a href="./recent-cyber-attacks/loan-depot.html">
+                        <img src="assets/picture-recent-cyber-attacks/loandepot-read-more.png" alt="" class="w-full h-72 object-cover rounded transition-opacity duration-200 hover:opacity-90">
+                    </a>
+                    <a href="./recent-cyber-attacks/loan-depot.html"><h2 class="text-2xl font-bold">Loan Depot</h2></a>
                     <div class="flex items-center space-x-4">
-                        <p class="text-purple-300 text-sm">SQL Injection</p>
+                        <a href="./types-of-vulnerabilities/ransomware.html"><p class="text-purple-300 text-sm">Ransomware</p></a>
                         <p class="text-gray-300 text-sm">5 minute read</p>
                     </div>
                     <div class="flex items-center space-x-4">
-                        <img src="assets/profile-picture/toledo.jpg" alt="" class="w-10 h-10 rounded">
+                        <a href="https://joaquinpangilinan.github.io/MPortfolio/" target="_blank"><img src="assets/profile-picture/pangilinan.jpg" alt="" class="w-10 h-10 rounded"></a>
                         <div>
-                            <h6 class="text-sm">Thaddeus Toledo</h6>
+                            <a href="https://joaquinpangilinan.github.io/MPortfolio/" target="_blank"><h6 class="text-sm">Myles Pangilinan</h6></a>
                             <small class="text-gray-300">Author</small>
                         </div>
                     </div>
